Fixed text-align and added float: left;

--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,9 @@ nav a:hover {
 
   nav li {
     display: inline-block;
-    text-align: left;
+    text-align: center;
     width: 50%;
+    float: left;
   }
 
 }
